# lore

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .vulture_whitelist.py  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Dockerfile  Makefile  PROBLEM_BRIEF.md  README.md  alembic.ini  conftest.py  demo.sh  docker-compose.dev-db.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/agents/: architecture-reviewer.md  devops-reviewer.md  docs-reviewer.md  phase-boundary-auditor.md  pr-describer.md  pr-reviewer.md  qa-reviewer.md  red-team-reviewer.md  software-developer.md  spec-challenger.md
.claude/hooks/: pre_tool_use.sh  worktree_create.sh
.claude/standards/: test-quality.md
.github/workflows/: ci.yml
alembic/: env.py
docs/: ARCHITECTURE.md  ARCHITECTURE_REQUIREMENTS.md  ASSUMPTIONS.md  BUSINESS_REQUIREMENTS.md  HIPAA_POSTURE.md  PROTOTYPE_PRD.md  RETRO_LOG.md  TECH_STACK.md  ci-audit.jsonl
docs/adr/: ADR-0001-harness-foundation.md  ADR-0002-monorepo-multi-service.md  ADR-0003-tokenization-cryptographic-lifecycle.md  ADR-0004-jwt-verification-contract.md  ADR-0005-transactional-outbox.md  ADR-0006-logging-correlation-error-taxonomy.md  ADR-0007-container-orchestration-cloud-run.md  ADR-0008-audit-chain-external-anchoring.md  ADR-0009-verification-latency-equalization.md  ADR-template.md
docs/backlog/: README.md  phase-00-governance.md  phase-foundation.md  phase-hardening.md  phase-production-cutover.md  phase-scale.md  phase-single-partner.md
docs/retros/: README.md  phase-harness-debt-drain.md
docs/reviews/: 01-principal-architect.md  02-chief-programmer.md  03-principal-security.md  04-compliance-legal.md  05-principal-devops.md  06-principal-uiux.md  07-executive.md  08-project-manager.md
docs/spec-challenges/: P00-config-validation.md  README.md
pgbouncer/: pgbouncer.ini  userlist.txt.example
prototype/: README.md  __main__.py  audit.py  canonical_lookup.py  csv_adapter.py  deletion.py  demo.py  dq.py  identity.py  mapping_engine.py  persistence.py  requirements.txt  synthetic_data.py  tokenization.py  vault.py  verification.py
prototype/canonical/: __init__.py  schema.sql  state_machine.py
prototype/docs/: notebook.md  walkthrough.md
prototype/fixtures/: partner_a_day1.csv  partner_a_day2.csv  partner_b_day1.csv  partner_b_day2.csv  scenario_inventory.json
prototype/mappings/: partner_a.yaml  partner_b.yaml
prototype/snippets/: h2_dedup_query.sql  h2_splink_demo.py
prototype/tests/: test_audit.py  test_canonical_lookup.py  test_csv_adapter.py  test_deletion.py  test_dq_engine.py  test_e2e_demo.py  test_identity.py  test_mapping_engine.py  test_redteam.py  test_schema.py  test_state_machine.py  test_synthetic_data.py  test_verification_api.py
scripts/: __init__.py  assert_density_check.py  assert_density_ratchet.sh  check_attack_test_order.sh  check_integration_mocks.py  check_pii_in_fixtures.py  check_spec_challenge.sh  ci-local.sh  doc_audit.py  entrypoint.sh  fix_companion_assertions.py  fix_single_assertion_violations.py  merge-pr.sh  mutmut-gate.sh  mutmut-security.sh  mutmut_gate.py  pip-audit.sh  rebuild_baseline.py  vulture_pydantic_plugin.py
src/lore_eligibility/: __init__.py  cli.py
src/lore_eligibility/bootstrapper/: __init__.py  config_validation.py  logging_config.py  main.py  settings.py
src/lore_eligibility/modules/: __init__.py
src/lore_eligibility/shared/: __init__.py  constants.py  errors.py
src/lore_eligibility/shared/security/: __init__.py
tests/unit/: test_auth_coverage.py  test_bootstrapper_smoke.py  test_check_pii_in_fixtures.py  test_config_validation.py  test_logging_config.py  test_logging_redaction_attack.py  test_shared_smoke.py
